Melhorias nas macros e offset Z.

--- a/macros.cfg
+++ b/macros.cfg
@@ -164,10 +164,12 @@ gcode:
     M109 S{printer["gcode_macro global"].print_end_clean_temp}
     CLEAN_NOZZLE
     BUCKET_POSITION
-    M104 S{printer["gcode_macro global"].print_end_clean_temp - 20}
-    M109 S{printer["gcode_macro global"].print_end_clean_temp - 20}
+    M106 S255   ; Help cooldown nozzle
+    M104 S{printer["gcode_macro global"].print_end_clean_temp - 30}
+    M109 S{printer["gcode_macro global"].print_end_clean_temp - 30}
     TURN_OFF_HEATERS
     CLEAN_NOZZLE
+    M107        ; Turn off fan
 
     BACK_RIGHT                                                  ; park nozzle at rear
     STATUS_OFF
@@ -267,6 +269,7 @@ gcode:
         G1 Y270 F{printer["gcode_macro global"].moving_macros_slow_fr}        ; Move nozzle to cut the purged filament
         G92 E0
         G1 Z5 F{printer["gcode_macro global"].moving_macros_fr}
+        M117
         RESTORE_GCODE_STATE NAME=purge
       {% endif %}
     {% endif %}
@@ -293,8 +296,7 @@ gcode:
             M117 Unloading
             G1 E-45 F{printer["gcode_macro global"].retraction_fr}      ; retract filament completely
             G1 E-45 F{printer["gcode_macro global"].retraction_fr}      ; retract filament completely
-
-            M117 Filament unloaded!
+            M117
 
             RESTORE_GCODE_STATE NAME=unload_filament
         {% endif %}
@@ -317,7 +319,7 @@ gcode:
             ; Extruder in relative mode
             M83
 
-            M117 Get ready
+            M117 Get ready...
             ; Wait until operator is ready
             G4 S3
 
@@ -334,7 +336,7 @@ gcode:
 
             G1 E-1 F{printer["gcode_macro global"].retraction_fr}       ; Retract outside the SAVE_GCODE_STATE
 
-            M117 Filament loaded!
+            M117
         {% endif %}
     {% endif %}
 
@@ -354,6 +356,9 @@ gcode:
     M107        ; Turn off fan
     M117 Homing
     G000028 { rawparams }
+    M117
+    TURN_OFF_HEATERS
+    STATUS_READY
 
 [gcode_macro M84]
 rename_existing: M000084
