--- a/printer.cfg
+++ b/printer.cfg
@@ -102,10 +102,11 @@ pin:                        ^PA3
 x_offset:                   0
 y_offset:                   25.0
 z_offset:                   2.99
-speed:                      10.0
-samples:                    3
+speed:                      5.0
+lift_speed:                 30.0
+samples:                    6
 samples_result:             median
-sample_retract_dist:        3.0
+sample_retract_dist:        10.0
 samples_tolerance:          0.006
 samples_tolerance_retries:  3
 
@@ -113,9 +114,9 @@ samples_tolerance_retries:  3
 
 [safe_z_home]
 home_xy_position:   207.8,296.0
-speed:              100
-z_hop:              10
-   
+speed:              50
+z_hop:              5
+
 ##--------------------------------------------------------------------
 
 [quad_gantry_level]
