Correção das coordenadas da impressora. Melhoras nas macros.

--- a/macros.cfg
+++ b/macros.cfg
@@ -101,11 +101,46 @@ gcode:
 #    Homing, Gantry related
 #####################################################################
 
+[gcode_macro G28]
+rename_existing: G000028
+gcode:
+    STATUS_HOMING
+
+    ; Set a fixed temperature for the hotend for homing
+    M117 Setting temperature for homing({printer["gcode_macro global"].hotend_max_temp_g28}C)
+
+    M106 S255   ; Help cooldown nozzle
+    M104 S{printer["gcode_macro global"].hotend_max_temp_g28} ; Hotend temperature
+    M140 S{printer["gcode_macro global"].hotend_max_temp_g28} ; Bed temperature
+
+    M109 S{printer["gcode_macro global"].hotend_max_temp_g28} ; Wait for Hotend
+    M190 S{printer["gcode_macro global"].hotend_max_temp_g28} ; Wait for Bed
+    M107        ; Turn off fan
+
+    M117 Homing
+    G000028 { rawparams }
+    M117
+    TURN_OFF_HEATERS
+
+    STATUS_READY
+
 [gcode_macro QUAD_GANTRY_LEVEL]
 rename_existing: __QUAD_GANTRY_LEVEL
 gcode:
     STATUS_LEVELING
+
+    M106 S255   ; Help cooldown nozzle
+    M104 S{printer["gcode_macro global"].hotend_max_temp_g28} ; Hotend temperature
+    M140 S{printer["gcode_macro global"].hotend_max_temp_g28} ; Bed temperature
+
+    M109 S{printer["gcode_macro global"].hotend_max_temp_g28} ; Wait for Hotend
+    M190 S{printer["gcode_macro global"].hotend_max_temp_g28} ; Wait for Bed
+    M107        ; Turn off fan
+
     __QUAD_GANTRY_LEVEL
+
+    TURN_OFF_HEATERS
+
     STATUS_READY
 
 [gcode_macro G32]
@@ -116,6 +151,7 @@ gcode:
     G28
     # BED_MESH_PROFILE LOAD=default
     BACK_CENTER
+
     STATUS_READY
 
 #####################################################################
@@ -186,7 +222,7 @@ gcode:
         G91
         G1 Z5 F{printer["gcode_macro global"].moving_macros_fr}
         G90
-        G1 X45 Y300 F{printer["gcode_macro global"].moving_macros_fast_fr}
+        G1 X45 Y310 F{printer["gcode_macro global"].moving_macros_fast_fr}
         G1 Z0.4 F{printer["gcode_macro global"].moving_macros_fr}
         RESTORE_GCODE_STATE NAME=bucket
     {% endif %}
@@ -202,7 +238,7 @@ gcode:
 
         G90
         G1 Z5 F{printer["gcode_macro global"].moving_macros_fr}
-        G1 X58 Y300 F{printer["gcode_macro global"].moving_macros_fast_fr}
+        G1 X58 Y310 F{printer["gcode_macro global"].moving_macros_fast_fr}
         G1 Z2.5 F{printer["gcode_macro global"].moving_macros_fr}
         G91
 
@@ -343,22 +379,6 @@ gcode:
 #####################################################################
 #    Overrides to add Status Leds
 #####################################################################
-
-[gcode_macro G28]
-rename_existing: G000028
-gcode:
-    STATUS_HOMING
-    ; Set a fixed temperature for the hotend for homing
-    M117 Setting Hotend temperature for homing({printer["gcode_macro global"].hotend_max_temp_g28}C)
-    M106 S255   ; Help cooldown nozzle
-    M104 S{printer["gcode_macro global"].hotend_max_temp_g28}
-    M109 S{printer["gcode_macro global"].hotend_max_temp_g28}
-    M107        ; Turn off fan
-    M117 Homing
-    G000028 { rawparams }
-    M117
-    TURN_OFF_HEATERS
-    STATUS_READY
 
 [gcode_macro M84]
 rename_existing: M000084
