Rotinas para a nova sonda do Z. Adicionada configuração do Klipper Screen.

--- a/macros.cfg
+++ b/macros.cfg
@@ -12,6 +12,7 @@ variable_retraction_fr:         1800    ; 30
 variable_retraction_fast_fr:    3600    ; 60
 variable_extrude_fr:            180     ; 3
 variable_extrude_fast_fr:       300     ; 5
+
 gcode:
     ; Nothing
 
@@ -101,43 +102,72 @@ gcode:
 #    Homing, Gantry related
 #####################################################################
 
-[gcode_macro G28]
-rename_existing: G000028
+[gcode_macro _BASE_FOR_CALIBRATION]
 gcode:
-    STATUS_HOMING
+    ; Set a fixed temperature for the hotend for calibration
+    M117 Setting calibration temperature({printer["gcode_macro global"].hotend_max_temp_g28}C)
 
-    ; Set a fixed temperature for the hotend for homing
-    M117 Setting temperature for homing({printer["gcode_macro global"].hotend_max_temp_g28}C)
-
-    M106 S255   ; Help cooldown nozzle
     M104 S{printer["gcode_macro global"].hotend_max_temp_g28} ; Hotend temperature
     M140 S{printer["gcode_macro global"].hotend_max_temp_g28} ; Bed temperature
 
     M109 S{printer["gcode_macro global"].hotend_max_temp_g28} ; Wait for Hotend
     M190 S{printer["gcode_macro global"].hotend_max_temp_g28} ; Wait for Bed
-    M107        ; Turn off fan
+
+[gcode_macro G28]
+rename_existing: G0028
+gcode:
+    STATUS_HOMING
+
+    _BASE_FOR_CALIBRATION
 
     M117 Homing
-    G000028 { rawparams }
+    G0028 { rawparams }
     M117
+    TURN_OFF_HEATERS
+
+    STATUS_READY
+
+[gcode_macro BED_MESH_CALIBRATE]
+rename_existing: __BED_MESH_CALIBRATE
+description: Perform Mesh Bed Leveling with klicky automount
+gcode:
+    STATUS_LEVELING
+
+    _BASE_FOR_CALIBRATION
+
+    ; Klicky Probe
+    _CheckProbe action=query
+    G90
+    Attach_Probe
+
+    __BED_MESH_CALIBRATE {% for p in params
+           %}{'%s=%s ' % (p, params[p])}{%
+          endfor %}
+    Dock_Probe
+    ; Klicky Probe
+
     TURN_OFF_HEATERS
 
     STATUS_READY
 
 [gcode_macro QUAD_GANTRY_LEVEL]
 rename_existing: __QUAD_GANTRY_LEVEL
+description: Conform a moving, twistable gantry to the shape of a stationary bed with klicky automount
 gcode:
     STATUS_LEVELING
 
-    M106 S255   ; Help cooldown nozzle
-    M104 S{printer["gcode_macro global"].hotend_max_temp_g28} ; Hotend temperature
-    M140 S{printer["gcode_macro global"].hotend_max_temp_g28} ; Bed temperature
+    _BASE_FOR_CALIBRATION
 
-    M109 S{printer["gcode_macro global"].hotend_max_temp_g28} ; Wait for Hotend
-    M190 S{printer["gcode_macro global"].hotend_max_temp_g28} ; Wait for Bed
-    M107        ; Turn off fan
+    ; Klicky Probe
+    _CheckProbe action=query
+	G90
+    Attach_Probe
 
-    __QUAD_GANTRY_LEVEL
+    __QUAD_GANTRY_LEVEL {% for p in params
+            %}{'%s=%s ' % (p, params[p])}{%
+            endfor %}
+    Dock_Probe
+    ; Klicky Probe
 
     TURN_OFF_HEATERS
 
@@ -168,7 +198,9 @@ gcode:
         CHAMBERLIGHT_25
     {% endif %}
 
-    G32                             ; Get moving ready
+    {% if not "xyz" in printer.toolhead.homed_axes or not printer.quad_gantry_level.applied %}
+        G32                         ; Get moving ready
+    {% endif %}
 
     M104 S{EXTRUDER}                ; Set temperatures
     M140 S{BED}                     ;
@@ -196,12 +228,12 @@ gcode:
     ; Clean nozzle on cooldown
     G90                                                         ; absolute positioning
     BUCKET_POSITION                                             ; position the nozzle in the bucket
+    M106 S255   ; Help cooldown nozzle
     M104 S{printer["gcode_macro global"].print_end_clean_temp}
     M109 S{printer["gcode_macro global"].print_end_clean_temp}
+    M104 S{printer["gcode_macro global"].print_end_clean_temp - 30} ; Pre set the next temperature
     CLEAN_NOZZLE
     BUCKET_POSITION
-    M106 S255   ; Help cooldown nozzle
-    M104 S{printer["gcode_macro global"].print_end_clean_temp - 30}
     M109 S{printer["gcode_macro global"].print_end_clean_temp - 30}
     TURN_OFF_HEATERS
     CLEAN_NOZZLE
@@ -216,7 +248,6 @@ description: Position the Nozzle in the cleaning position
 gcode:
     {% if not "xyz" in printer.toolhead.homed_axes %}
       { action_raise_error("Please home first!") }
-      M117 Please home first!
     {% else %}
         SAVE_GCODE_STATE NAME=bucket
         G91
@@ -281,6 +312,8 @@ gcode:
 
 [gcode_macro PURGE_NOZZLE]
 gcode:
+    {% set global = printer["gcode_macro global"] %}
+
     {% if not "xyz" in printer.toolhead.homed_axes %}
       { action_raise_error("Please home first!") }
       M117 Please home first!
@@ -300,11 +333,11 @@ gcode:
         M83
         G92 E0
         G90
-        G1 X{ range(3, 6) | random } E15 F{printer["gcode_macro global"].extrude_fr}
-        G1 Z0.3 F{printer["gcode_macro global"].moving_macros_fr}
-        G1 Y270 F{printer["gcode_macro global"].moving_macros_slow_fr}        ; Move nozzle to cut the purged filament
+        G1 X{ range(3, 6) | random } E20 F{global.extrude_fr}
+        G1 Z0.3 F{global.moving_macros_fr}
+        G1 Y270 F{global.moving_macros_slow_fr}        ; Move nozzle to cut the purged filament
         G92 E0
-        G1 Z5 F{printer["gcode_macro global"].moving_macros_fr}
+        G1 Z5 F{global.moving_macros_fr}
         M117
         RESTORE_GCODE_STATE NAME=purge
       {% endif %}
