--- a/printer.cfg
+++ b/printer.cfg
@@ -15,7 +15,7 @@ max_accel:              5000
 max_accel_to_decel:     5000
 max_z_velocity:         70
 max_z_accel:            700
-square_corner_velocity: 5.0
+square_corner_velocity: 2.5
 
 [idle_timeout]
 timeout: 900 # 15 minutes
@@ -99,16 +99,16 @@ max_temp: 80
 
 [probe]
 pin:                        ^PA3
-x_offset:                   0
+x_offset:                   2
 y_offset:                   25.0
 z_offset:                   2.99
-speed:                      3.0
-lift_speed:                 30.0
+speed:                      8.5
+lift_speed:                 15.0
 samples:                    5
 samples_result:             median
-sample_retract_dist:        5.0
+sample_retract_dist:        1.5
 samples_tolerance:          0.006
-samples_tolerance_retries:  3
+samples_tolerance_retries:  10
 
 ##--------------------------------------------------------------------
 
@@ -129,7 +129,7 @@ points:
     250,225
     250,25
 speed:              300
-horizontal_move_z:  20
+horizontal_move_z:  6
 retries:            5
 retry_tolerance:    0.0075
 max_adjust:         10
@@ -152,6 +152,7 @@ relative_reference_index: 12
 #####################################################################
 
 [include macros.cfg]
+[include probe.cfg]
 
 #####################################################################
 #    Lights
