--- a/macros.cfg
+++ b/macros.cfg
@@ -104,14 +104,16 @@ gcode:
 
 [gcode_macro _BASE_FOR_CALIBRATION]
 gcode:
+    {% set global = printer["gcode_macro global"] %}
+
     ; Set a fixed temperature for the hotend for calibration
-    M117 Setting calibration temperature({printer["gcode_macro global"].hotend_max_temp_g28}C)
+    M117 Setting calibration temperature({global.hotend_max_temp_g28}C)
 
-    M104 S{printer["gcode_macro global"].hotend_max_temp_g28} ; Hotend temperature
-    M140 S{printer["gcode_macro global"].hotend_max_temp_g28} ; Bed temperature
+    M104 S{global.hotend_max_temp_g28} ; Hotend temperature
+    M140 S{global.hotend_max_temp_g28} ; Bed temperature
 
-    M109 S{printer["gcode_macro global"].hotend_max_temp_g28} ; Wait for Hotend
-    M190 S{printer["gcode_macro global"].hotend_max_temp_g28} ; Wait for Bed
+    M109 S{global.hotend_max_temp_g28} ; Wait for Hotend
+    M190 S{global.hotend_max_temp_g28} ; Wait for Bed
 
 [gcode_macro G28]
 rename_existing: G0028
@@ -217,11 +219,13 @@ gcode:
 
 [gcode_macro PRINT_END]
 gcode:
+    {% set global = printer["gcode_macro global"] %}
+
     M400                                                        ; wait for buffer to clear
     G92 E0                                                      ; zero the extruder
-    G1 E-10.0 F{printer["gcode_macro global"].retraction_fr}    ; retract filament
+    G1 E-10.0 F{global.retraction_fr}    ; retract filament
     G91                                                         ; relative positioning
-    G1 Z5 F{printer["gcode_macro global"].moving_macros_fr}     ; move nozzle to remove stringing
+    G1 Z5 F{global.moving_macros_fr}     ; move nozzle to remove stringing
     M107                                                        ; turn off fan
     TURN_OFF_HEATERS
 
@@ -229,12 +233,12 @@ gcode:
     G90                                                         ; absolute positioning
     BUCKET_POSITION                                             ; position the nozzle in the bucket
     M106 S255   ; Help cooldown nozzle
-    M104 S{printer["gcode_macro global"].print_end_clean_temp}
-    M109 S{printer["gcode_macro global"].print_end_clean_temp}
-    M104 S{printer["gcode_macro global"].print_end_clean_temp - 30} ; Pre set the next temperature
+    M104 S{global.print_end_clean_temp}
+    M109 S{global.print_end_clean_temp}
+    M104 S{global.print_end_clean_temp - 30} ; Pre set the next temperature
     CLEAN_NOZZLE
     BUCKET_POSITION
-    M109 S{printer["gcode_macro global"].print_end_clean_temp - 30}
+    M109 S{global.print_end_clean_temp - 30}
     TURN_OFF_HEATERS
     CLEAN_NOZZLE
     M107        ; Turn off fan
@@ -246,21 +250,25 @@ gcode:
 [gcode_macro BUCKET_POSITION]
 description: Position the Nozzle in the cleaning position
 gcode:
+    {% set global = printer["gcode_macro global"] %}
+
     {% if not "xyz" in printer.toolhead.homed_axes %}
       { action_raise_error("Please home first!") }
     {% else %}
         SAVE_GCODE_STATE NAME=bucket
         G91
-        G1 Z5 F{printer["gcode_macro global"].moving_macros_fr}
+        G1 Z5 F{global.moving_macros_fr}
         G90
-        G1 X45 Y310 F{printer["gcode_macro global"].moving_macros_fast_fr}
-        G1 Z0.4 F{printer["gcode_macro global"].moving_macros_fr}
+        G1 X45 Y310 F{global.moving_macros_fast_fr}
+        G1 Z0.4 F{global.moving_macros_fr}
         RESTORE_GCODE_STATE NAME=bucket
     {% endif %}
 
 [gcode_macro CLEAN_NOZZLE]
 description: Clean the Nozzle in the bed brush
 gcode:
+    {% set global = printer["gcode_macro global"] %}
+
     {% if not "xyz" in printer.toolhead.homed_axes %}
       { action_raise_error("Please home first!") }
       M117 Please home first!
@@ -268,12 +276,12 @@ gcode:
         SAVE_GCODE_STATE NAME=clean
 
         G90
-        G1 Z5 F{printer["gcode_macro global"].moving_macros_fr}
-        G1 X58 Y310 F{printer["gcode_macro global"].moving_macros_fast_fr}
-        G1 Z2.5 F{printer["gcode_macro global"].moving_macros_fr}
+        G1 Z5 F{global.moving_macros_fr}
+        G1 X58 Y310 F{global.moving_macros_fast_fr}
+        G1 Z2.5 F{global.moving_macros_fr}
         G91
 
-        G1 X5.167  Y-4 F{printer["gcode_macro global"].moving_macros_fr}
+        G1 X5.167  Y-4 F{global.moving_macros_fr}
         G1 X10.333 Y4
         G1 X10.333 Y-4
         G1 X5.167  Y4
@@ -303,9 +311,9 @@ gcode:
         G1 Y1
         G1 X-31.0
 
-        G1 Z2.5 F{printer["gcode_macro global"].moving_macros_fr}
+        G1 Z2.5 F{global.moving_macros_fr}
 
-        G1 Y-20 F{printer["gcode_macro global"].moving_macros_fast_fr}
+        G1 Y-20 F{global.moving_macros_fast_fr}
 
         RESTORE_GCODE_STATE NAME=clean
     {% endif %}
@@ -345,6 +353,8 @@ gcode:
 
 [gcode_macro UNLOAD_FILAMENT]
 gcode:
+    {% set global = printer["gcode_macro global"] %}
+
     {% if not "xyz" in printer.toolhead.homed_axes %}
         { action_raise_error("Please home first!") }
         M117 Please home first!
@@ -356,15 +366,15 @@ gcode:
             SAVE_GCODE_STATE NAME=unload_filament
 
             G90
-            G1 Z110 F{printer["gcode_macro global"].moving_macros_fr}
+            G1 Z110 F{global.moving_macros_fr}
             FRONT_CENTER
 
             ; Extruder in relative mode
             M83
-            G1 E10 F{printer["gcode_macro global"].extrude_fast_fr}     ; extrude a little to soften new filament
+            G1 E10 F{global.extrude_fast_fr}     ; extrude a little to soften new filament
             M117 Unloading
-            G1 E-45 F{printer["gcode_macro global"].retraction_fr}      ; retract filament completely
-            G1 E-45 F{printer["gcode_macro global"].retraction_fr}      ; retract filament completely
+            G1 E-45 F{global.retraction_fr}      ; retract filament completely
+            G1 E-45 F{global.retraction_fr}      ; retract filament completely
             M117
 
             RESTORE_GCODE_STATE NAME=unload_filament
@@ -373,6 +383,8 @@ gcode:
 
 [gcode_macro LOAD_FILAMENT]
 gcode:
+    {% set global = printer["gcode_macro global"] %}
+
     {% if not "xyz" in printer.toolhead.homed_axes %}
         { action_raise_error("Please home first!") }
         M117 Please home first!
@@ -393,17 +405,17 @@ gcode:
             G4 S3
 
             M117 Loading
-            G1 E10 F{printer["gcode_macro global"].extrude_fr}          ; extrude to fill the extruder
+            G1 E10 F{global.extrude_fr}          ; extrude to fill the extruder
             M117 Filling Hotend
-            G1 E35 F{printer["gcode_macro global"].extrude_fast_fr}     ; extrude to fill the hotend
-            G1 E35 F{printer["gcode_macro global"].extrude_fast_fr}     ; ...
+            G1 E35 F{global.extrude_fast_fr}     ; extrude to fill the hotend
+            G1 E35 F{global.extrude_fast_fr}     ; ...
 
             PURGE_NOZZLE
             CLEAN_NOZZLE
 
             RESTORE_GCODE_STATE NAME=load_filament
 
-            G1 E-1 F{printer["gcode_macro global"].retraction_fr}       ; Retract outside the SAVE_GCODE_STATE
+            G1 E-1 F{global.retraction_fr}       ; Retract outside the SAVE_GCODE_STATE
 
             M117
         {% endif %}
