Funções para a sonda do Z.

--- a/macros.cfg
+++ b/macros.cfg
@@ -3,6 +3,7 @@
 #####################################################################
 
 [gcode_macro global]
+variable_has_attachable_probe:  True
 variable_hotend_max_temp_g28:   40
 variable_print_end_clean_temp:  180
 variable_moving_macros_slow_fr: 2400    ; 40
@@ -133,20 +134,25 @@ gcode:
 rename_existing: __BED_MESH_CALIBRATE
 description: Perform Mesh Bed Leveling with klicky automount
 gcode:
+    {% set global = printer["gcode_macro global"] %}
+
     STATUS_LEVELING
 
     _BASE_FOR_CALIBRATION
 
-    ; Klicky Probe
-    _CheckProbe action=query
-    G90
-    Attach_Probe
+    {% if global.has_attachable_probe %}
+        _CheckProbe action=query
+        G90
+        Attach_Probe
+    {% endif %}
 
     __BED_MESH_CALIBRATE {% for p in params
            %}{'%s=%s ' % (p, params[p])}{%
           endfor %}
-    Dock_Probe
-    ; Klicky Probe
+
+    {% if global.has_attachable_probe %}
+        Dock_Probe
+    {% endif %}
 
     TURN_OFF_HEATERS
 
@@ -160,20 +166,60 @@ gcode:
 
     _BASE_FOR_CALIBRATION
 
-    ; Klicky Probe
-    _CheckProbe action=query
-	G90
-    Attach_Probe
+    {% if global.has_attachable_probe %}
+        _CheckProbe action=query
+        G90
+        Attach_Probe
+    {% endif %}
 
     __QUAD_GANTRY_LEVEL {% for p in params
             %}{'%s=%s ' % (p, params[p])}{%
             endfor %}
-    Dock_Probe
-    ; Klicky Probe
+
+    {% if global.has_attachable_probe %}
+        Dock_Probe
+    {% endif %}
 
     TURN_OFF_HEATERS
 
     STATUS_READY
+
+[gcode_macro PROBE_ACCURACY]
+rename_existing: __PROBE_ACCURACY
+description:Probe Z-height accuracy at current XY position with klicky automount
+gcode:
+    {% if not 'xyz' in printer.toolhead.homed_axes %}
+        { action_raise_error("Must Home X, Y and Z Axis First!") }
+    {% endif %}
+
+    {% if global.has_attachable_probe %}
+        _CheckProbe action=query
+        G90
+        Attach_Probe
+    {% endif %}
+
+    __PROBE_ACCURACY {% for p in params
+            %}{'%s=%s ' % (p, params[p])}{%
+            endfor %}
+
+    {% if global.has_attachable_probe %}
+        Dock_Probe
+    {% endif %}
+
+[gcode_macro PROBE_CALIBRATE]
+rename_existing: __PROBE_CALIBRATE
+gcode:
+    {% if not 'xyz' in printer.toolhead.homed_axes %}
+        { action_raise_error("Must Home X, Y and Z Axis First!") }
+    {% endif %}
+
+    {% if global.has_attachable_probe %}
+        { action_raise_error("PROBE_CALIBRATE disabled with attachable probe!") }
+    {% else %}
+        __PROBE_CALIBRATE {% for p in params
+                %}{'%s=%s ' % (p, params[p])}{%
+                endfor %}
+    {% endif %}
 
 [gcode_macro G32]
 gcode:
