Melhorias nas configurações da sonda Z.

--- a/macros.cfg
+++ b/macros.cfg
@@ -3,8 +3,9 @@
 #####################################################################
 
 [gcode_macro global]
-variable_has_attachable_probe:  True
-variable_hotend_max_temp_g28:   40
+variable_has_attachable_probe:  False
+variable_hotend_home_temp:      40
+variable_bed_home_temp:         50
 variable_print_end_clean_temp:  180
 variable_moving_macros_slow_fr: 2400    ; 40
 variable_moving_macros_fr:      4800    ; 80
@@ -108,13 +109,13 @@ gcode:
     {% set global = printer["gcode_macro global"] %}
 
     ; Set a fixed temperature for the hotend for calibration
-    M117 Setting calibration temperature({global.hotend_max_temp_g28}C)
+    M117 Setting calibration temperature({global.hotend_home_temp}C)
 
-    M104 S{global.hotend_max_temp_g28} ; Hotend temperature
-    M140 S{global.hotend_max_temp_g28} ; Bed temperature
+    M104 S{global.hotend_home_temp} ; Hotend temperature
+    M140 S{global.bed_home_temp}    ; Bed temperature
 
-    M109 S{global.hotend_max_temp_g28} ; Wait for Hotend
-    M190 S{global.hotend_max_temp_g28} ; Wait for Bed
+    M109 S{global.hotend_home_temp} ; Wait for Hotend
+    M190 S{global.bed_home_temp}    ; Wait for Bed
 
 [gcode_macro G28]
 rename_existing: G0028
@@ -162,6 +163,8 @@ gcode:
 rename_existing: __QUAD_GANTRY_LEVEL
 description: Conform a moving, twistable gantry to the shape of a stationary bed with klicky automount
 gcode:
+    {% set global = printer["gcode_macro global"] %}
+
     STATUS_LEVELING
 
     _BASE_FOR_CALIBRATION
@@ -188,6 +191,8 @@ gcode:
 rename_existing: __PROBE_ACCURACY
 description:Probe Z-height accuracy at current XY position with klicky automount
 gcode:
+    {% set global = printer["gcode_macro global"] %}
+
     {% if not 'xyz' in printer.toolhead.homed_axes %}
         { action_raise_error("Must Home X, Y and Z Axis First!") }
     {% endif %}
@@ -197,6 +202,8 @@ gcode:
         G90
         Attach_Probe
     {% endif %}
+
+    CENTER
 
     __PROBE_ACCURACY {% for p in params
             %}{'%s=%s ' % (p, params[p])}{%
