--- a/probe.cfg
+++ b/probe.cfg
@@ -63,6 +63,12 @@ gcode:
 [gcode_macro Attach_Probe]
 description: Attaches Klicky Probe
 gcode:
+    {% set global = printer["gcode_macro global"] %}
+
+    {% if not global.has_attachable_probe %}
+        { action_raise_error("Machine without Attacheable probe!") }
+    {% endif %}
+
     # Get probe attach status
     {% set probe_attached = printer["gcode_macro _Probe_Variables"].probe_attached %}
 
@@ -111,6 +117,12 @@ gcode:
 [gcode_macro Dock_Probe]
 description: Docks Klicky Probe
 gcode:
+    {% set global = printer["gcode_macro global"] %}
+
+    {% if not global.has_attachable_probe %}
+        { action_raise_error("Machine without Attacheable probe!") }
+    {% endif %}
+
     # Get probe attach status
     {% set probe_attached = printer["gcode_macro _Probe_Variables"].probe_attached %}
 
