Adicionado o offset ao PRINT_START.

--- a/macros.cfg
+++ b/macros.cfg
@@ -248,6 +248,7 @@ gcode:
     {% set BED = params.BED|default(100)|int %}
     {% set EXTRUDER = params.EXTRUDER|default(240)|int %}
     {% set CHAMBER = params.CHAMBER|default(60)|int %}
+    {% set Z_ADJUST = params.Z_ADJUST|default(0)|int %}
 
     {% if printer['output_pin chamberlight'].value <= 0 %}
         CHAMBERLIGHT_25
@@ -255,6 +256,11 @@ gcode:
 
     {% if not "xyz" in printer.toolhead.homed_axes or not printer.quad_gantry_level.applied %}
         G32                         ; Get moving ready
+    {% endif %}
+
+    ; Apply Z offset after homing
+    {% if Z_ADJUST != 0 %}
+        SET_GCODE_OFFSET Z_ADJUST={Z_ADJUST} MOVE=1
     {% endif %}
 
     M104 S{EXTRUDER}                ; Set temperatures
