--- a/macros.cfg
+++ b/macros.cfg
@@ -235,7 +235,6 @@ gcode:
     QUAD_GANTRY_LEVEL
     G28
     # BED_MESH_PROFILE LOAD=default
-    BACK_CENTER
 
     STATUS_READY
 
@@ -248,7 +247,7 @@ gcode:
     {% set BED = params.BED|default(100)|int %}
     {% set EXTRUDER = params.EXTRUDER|default(240)|int %}
     {% set CHAMBER = params.CHAMBER|default(60)|int %}
-    {% set Z_ADJUST = params.Z_ADJUST|default(0)|int %}
+    {% set Z_OFFSET = params.Z_OFFSET|default(0)|int %}
 
     {% if printer['output_pin chamberlight'].value <= 0 %}
         CHAMBERLIGHT_25
@@ -259,8 +258,8 @@ gcode:
     {% endif %}
 
     ; Apply Z offset after homing
-    {% if Z_ADJUST != 0 %}
-        SET_GCODE_OFFSET Z_ADJUST={Z_ADJUST} MOVE=1
+    {% if Z_OFFSET != 0 %}
+        SET_GCODE_OFFSET Z={Z_OFFSET} MOVE=1
     {% endif %}
 
     M104 S{EXTRUDER}                ; Set temperatures
