Restaurada o Bed Mesh.

--- a/macros.cfg
+++ b/macros.cfg
@@ -234,7 +234,7 @@ gcode:
     G28
     QUAD_GANTRY_LEVEL
     G28
-    # BED_MESH_PROFILE LOAD=default
+    BED_MESH_PROFILE LOAD=default
 
     STATUS_READY
 
