--- a/printer.cfg
+++ b/printer.cfg
@@ -97,25 +97,25 @@ max_temp: 80
 #    Homing, Gantry and Bed Adjustments
 #####################################################################
 
+[safe_z_home]
+home_xy_position:   207.8,306.5
+speed:              50
+z_hop:              15
+
+##--------------------------------------------------------------------
+
 [probe]
 pin:                        ^PA3
 x_offset:                   0
 y_offset:                   25.0
 z_offset:                   3.62
-speed:                      11
-lift_speed:                 15
+speed:                      45
+lift_speed:                 45
 samples:                    5
 samples_result:             median
-sample_retract_dist:        6
+sample_retract_dist:        30
 samples_tolerance:          0.006
 samples_tolerance_retries:  10
-
-##--------------------------------------------------------------------
-
-[safe_z_home]
-home_xy_position:   207.8,306.5
-speed:              50
-z_hop:              10
 
 ##--------------------------------------------------------------------
 
@@ -129,7 +129,7 @@ points:
     250,225
     250,25
 speed:              300
-horizontal_move_z:  6
+horizontal_move_z:  30
 retries:            5
 retry_tolerance:    0.0075
 max_adjust:         10
@@ -138,7 +138,7 @@ max_adjust:         10
 
 [bed_mesh]
 speed: 300
-horizontal_move_z: 10
+horizontal_move_z: 30
 mesh_min: 40, 40
 mesh_max: 260, 260
 fade_start: 0.6
@@ -159,3 +159,25 @@ relative_reference_index: 12
 #####################################################################
 
 [include lights.cfg]
+
+#*# <---------------------- SAVE_CONFIG ---------------------->
+#*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
+#*#
+#*# [bed_mesh default]
+#*# version = 1
+#*# points =
+#*# 	  0.048125, 0.051875, 0.032500, 0.040625, 0.024375
+#*# 	  0.001250, 0.020625, 0.000625, 0.033125, 0.010000
+#*# 	  -0.025625, 0.003125, 0.000000, 0.033125, 0.003125
+#*# 	  -0.006250, 0.017500, 0.011250, 0.043750, 0.018750
+#*# 	  0.053750, 0.058750, 0.038125, 0.051875, 0.024375
+#*# tension = 0.2
+#*# min_x = 40.0
+#*# algo = bicubic
+#*# y_count = 5
+#*# mesh_y_pps = 2
+#*# min_y = 40.0
+#*# x_count = 5
+#*# max_y = 260.0
+#*# mesh_x_pps = 2
+#*# max_x = 260.0
