Melhorias nas macros com variaveis.

--- a/macros.cfg
+++ b/macros.cfg
@@ -4,9 +4,12 @@
 
 [gcode_macro global]
 variable_has_attachable_probe:  False
-variable_hotend_home_temp:      40
+variable_hotend_home_temp:      50
 variable_bed_home_temp:         50
-variable_print_end_clean_temp:  180
+variable_print_end_clean_temp:  190
+variable_print_end_clean_steps: 3
+variable_print_end_clean_diff:  20
+variable_calibration_temp:      60
 variable_moving_macros_slow_fr: 2400    ; 40
 variable_moving_macros_fr:      4800    ; 80
 variable_moving_macros_fast_fr: 18000   ; 300
@@ -14,6 +17,15 @@ variable_retraction_fr:         1800    ; 30
 variable_retraction_fast_fr:    3600    ; 60
 variable_extrude_fr:            180     ; 3
 variable_extrude_fast_fr:       300     ; 5
+
+variable_safe_z_rise:           5 ; How much to raise Z on moves
+variable_bucket_pos_x:          45
+variable_bucket_pos_y:          310
+variable_bucket_pos_z:          0.2
+
+variable_brush_pos_x:           58
+variable_brush_pos_y:           310
+variable_brush_pos_z:           2
 
 gcode:
     ; Nothing
@@ -104,25 +116,17 @@ gcode:
 #    Homing, Gantry related
 #####################################################################
 
-[gcode_macro _BASE_FOR_CALIBRATION]
-gcode:
-    {% set global = printer["gcode_macro global"] %}
-
-    ; Set a fixed temperature for the hotend for calibration
-    M117 Setting calibration temperature({global.hotend_home_temp}C)
-
-    M104 S{global.hotend_home_temp} ; Hotend temperature
-    M140 S{global.bed_home_temp}    ; Bed temperature
-
-    M109 S{global.hotend_home_temp} ; Wait for Hotend
-    M190 S{global.bed_home_temp}    ; Wait for Bed
-
 [gcode_macro G28]
 rename_existing: G0028
 gcode:
+    {% set global = printer["gcode_macro global"] %}
+
     STATUS_HOMING
 
-    _BASE_FOR_CALIBRATION
+    ; Set a fixed temperature for the hotend for calibration
+    M117 Setting homming temperature({global.hotend_home_temp}C)
+    M104 S{global.hotend_home_temp} ; Hotend temperature
+    M109 S{global.hotend_home_temp} ; Wait for Hotend
 
     M117 Homing
     G0028 { rawparams }
@@ -139,7 +143,12 @@ gcode:
 
     STATUS_LEVELING
 
-    _BASE_FOR_CALIBRATION
+    ; Set a fixed temperature for the hotend and bed for calibration
+    M117 Setting calibration temperature({global.calibration_temp}C)
+    M140 S{global.calibration_temp + 5}    ; Bed temperature a little higher, so we get a better temp stability when probing
+    M190 S{global.calibration_temp + 5}    ; Wait for Bed
+    M140 S{global.calibration_temp}    ; Final Bed temperature
+    M190 S{global.calibration_temp}    ; Wait for Bed
 
     {% if global.has_attachable_probe %}
         _CheckProbe action=query
@@ -166,8 +175,6 @@ gcode:
     {% set global = printer["gcode_macro global"] %}
 
     STATUS_LEVELING
-
-    _BASE_FOR_CALIBRATION
 
     {% if global.has_attachable_probe %}
         _CheckProbe action=query
@@ -279,29 +286,34 @@ gcode:
 gcode:
     {% set global = printer["gcode_macro global"] %}
 
-    M400                                                        ; wait for buffer to clear
-    G92 E0                                                      ; zero the extruder
+    M400                                 ; wait for buffer to clear
+    G92 E0                               ; zero the extruder
     G1 E-10.0 F{global.retraction_fr}    ; retract filament
-    G91                                                         ; relative positioning
-    G1 Z5 F{global.moving_macros_fr}     ; move nozzle to remove stringing
-    M107                                                        ; turn off fan
+    G91                                  ; relative positioning
+    G1 Z{global.safe_z_rise} F{global.moving_macros_fr}     ; move nozzle to remove stringing
+    M107                                 ; turn off fan
     TURN_OFF_HEATERS
 
-    ; Clean nozzle on cooldown
-    G90                                                         ; absolute positioning
-    BUCKET_POSITION                                             ; position the nozzle in the bucket
-    M106 S255   ; Help cooldown nozzle
-    M104 S{global.print_end_clean_temp}
-    M109 S{global.print_end_clean_temp}
-    M104 S{global.print_end_clean_temp - 30} ; Pre set the next temperature
-    CLEAN_NOZZLE
-    BUCKET_POSITION
-    M109 S{global.print_end_clean_temp - 30}
+    ; Clean nozzle on cooldown(Allow next print to start automatically, nozzle clean to home Z)
+    G90                                  ; absolute positioning
+    BUCKET_POSITION                      ; position the nozzle in the bucket
+    M106 S120   ; Help cooldown nozzle
+
+    {% for i in range(global.print_end_clean_steps) %}
+        {% set temp = global.print_end_clean_temp - (global.print_end_clean_diff * i) %}
+        {% set next_temp = global.print_end_clean_temp - (global.print_end_clean_diff * (i + 1)) %}
+
+        M104 S{temp}    ; Set temp
+        M109 S{temp}    ; Wait temp
+        M104 S{next_temp} ; Preset the next temp
+        CLEAN_NOZZLE
+        BUCKET_POSITION
+    {% endfor %}
+
     TURN_OFF_HEATERS
-    CLEAN_NOZZLE
     M107        ; Turn off fan
 
-    BACK_RIGHT                                                  ; park nozzle at rear
+    BACK_CENTER                           ; park nozzle at rear center
     STATUS_OFF
     CHAMBERLIGHT_OFF
 
@@ -314,11 +326,15 @@ gcode:
       { action_raise_error("Please home first!") }
     {% else %}
         SAVE_GCODE_STATE NAME=bucket
-        G91
-        G1 Z5 F{global.moving_macros_fr}
+
+        ; Only raise Z if not in position
+        {% if printer.toolhead.position.x != global.bucket_pos_x or printer.toolhead.position.y != global.bucket_pos_y %}
+            G91
+            G1 Z{global.safe_z_rise} F{global.moving_macros_fr}
+        {% endif %}
         G90
-        G1 X45 Y310 F{global.moving_macros_fast_fr}
-        G1 Z0.4 F{global.moving_macros_fr}
+        G1 X{global.bucket_pos_x} Y{global.bucket_pos_y} F{global.moving_macros_fast_fr}
+        G1 Z{global.bucket_pos_z} F{global.moving_macros_fr}
         RESTORE_GCODE_STATE NAME=bucket
     {% endif %}
 
@@ -334,9 +350,9 @@ gcode:
         SAVE_GCODE_STATE NAME=clean
 
         G90
-        G1 Z5 F{global.moving_macros_fr}
-        G1 X58 Y310 F{global.moving_macros_fast_fr}
-        G1 Z2.5 F{global.moving_macros_fr}
+        G1 Z{global.safe_z_rise} F{global.moving_macros_fr}
+        G1 X{global.brush_pos_x} Y{global.brush_pos_y} F{global.moving_macros_fast_fr}
+        G1 Z{global.brush_pos_z}  F{global.moving_macros_fr}
         G91
 
         G1 X5.167  Y-4 F{global.moving_macros_fr}
@@ -369,9 +385,10 @@ gcode:
         G1 Y1
         G1 X-31.0
 
-        G1 Z2.5 F{global.moving_macros_fr}
+        G90
+        G1 Z{global.safe_z_rise} F{global.moving_macros_fr}
 
-        G1 Y-20 F{global.moving_macros_fast_fr}
+        BUCKET_POSITION
 
         RESTORE_GCODE_STATE NAME=clean
     {% endif %}
@@ -400,10 +417,10 @@ gcode:
         G92 E0
         G90
         G1 X{ range(3, 6) | random } E20 F{global.extrude_fr}
-        G1 Z0.3 F{global.moving_macros_fr}
-        G1 Y270 F{global.moving_macros_slow_fr}        ; Move nozzle to cut the purged filament
+        G1 Z0.2 F{global.moving_macros_fr}
+        G1 Y295 F{global.moving_macros_slow_fr}     ; Move nozzle to cut the purged filament
+        G1 Y270 F{global.moving_macros_fr}
         G92 E0
-        G1 Z5 F{global.moving_macros_fr}
         M117
         RESTORE_GCODE_STATE NAME=purge
       {% endif %}
