--- a/probe.cfg
+++ b/probe.cfg
@@ -89,7 +89,7 @@ gcode:
 
     # If probe not attached
     {% elif not probe_attached %}
-        { action_respond_info("Attaching Probe") }
+        M117 Attaching Probe
 
         # Probe Attach
         G91
@@ -104,7 +104,7 @@ gcode:
 
     {% else %}
         {% if verbose %}
-            { action_respond_info("Probe already attached!") }
+            M117 Probe already attached!
         {% endif %}
 
         # Probe attached, do nothing
@@ -147,7 +147,7 @@ gcode:
 
     # If probe attached
     {% elif probe_attached %}
-        { action_respond_info("Docking Probe") }
+        M117 Docking Probe
 
         # Probe Dock
         G91
@@ -164,7 +164,7 @@ gcode:
         _CheckProbe action=dock
 
     {% else %}
-        { action_respond_info("Probe already docked") }
+        M117 Probe already docked
 
         # Probe docked, do nothing
         _CheckProbe action=query
