--- a/macros.cfg
+++ b/macros.cfg
@@ -7,9 +7,7 @@ variable_has_attachable_probe:      False
 
 variable_extruder_calibration_temp: 50
 
-variable_print_end_clean_temp:      190
-variable_print_end_clean_steps:     4
-variable_print_end_clean_diff:      20
+variable_print_end_clean_delays:    25,12,12,15,15,20,0
 
 variable_moving_macros_slow_fr:     2400    ; 40
 variable_moving_macros_fr:          4800    ; 80
@@ -342,28 +340,26 @@ gcode:
 gcode:
     {% set g = printer["gcode_macro global"] %}
 
-    M400                                 ; wait for buffer to clear
-    G91                                  ; relative positioning
-    G1 Z{g.safe_z_rise} F{g.moving_macros_fr}     ; move nozzle to remove stringing
-    G92 E0                               ; zero the extruder
-    G1 E-10.0 F{g.retraction_fr}    ; retract filament
-    M106 S0                              ; Turn off fan
+    M400                                        ; wait for buffer to clear
+    SET_GCODE_OFFSET Z=0 MOVE=1                 ; reset Z offset
+    G91                                         ; relative positioning
+    G1 Z{g.safe_z_rise} F{g.moving_macros_fr}   ; move nozzle to remove stringing
+    G92 E0                                      ; zero the extruder
+    G1 E-10.0 F{g.retraction_fast_fr}           ; retract filament
+    M106 S0                                     ; Turn off fan
     TURN_OFF_HEATERS
 
     ; Clean nozzle on cooldown(Allow next print to start automatically, nozzle clean to home Z)
     G90                                  ; absolute positioning
     BUCKET_POSITION                      ; position the nozzle in the bucket
-    M106 S120                            ; Help cooldown nozzle
 
-    {% for i in range(g.print_end_clean_steps) %}
-        {% set temp = g.print_end_clean_temp - (g.print_end_clean_diff * i) %}
-        {% set next_temp = g.print_end_clean_temp - (g.print_end_clean_diff * (i + 1)) %}
-
-        M109 S{temp}                    ; Set and wait temp
-        M104 S{next_temp}               ; Preset the next temp
-        CLEAN_NOZZLE
+    M117 Cleaning extruder
+    {% for delay in g.print_end_clean_delays %}
         BUCKET_POSITION
+        G4 P{delay * 1000}
+        CLEAN_NOZZLE
     {% endfor %}
+    M117
 
     TURN_OFF_HEATERS
     M106 S0                             ; Turn off fan
